⚡ improvement: Implement java.net http